--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -49,7 +49,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Storing the URL we are going to start scrappping into varible called 'standings_url'"
+        "Storing the URL we are going to start scraping into variable called 'standings_url'"
       ],
       "metadata": {
         "id": "LHl5YNx8pUJB"
